--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "braces": ">=2.3.1",
     "graphql-yoga": "^1.16.7",
-    "braces": ">=2.3.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
